crates/typechecker/tests/errors/undeclared_udf.dl
.decl Person(id: int32, name: string)
.decl Stamped(id: int32, stamped: string)
.input Person(IO="file", filename="Person.csv", delimiter=",")
.output Stamped
Stamped(id, stamp_name(name)) :- Person(id, name).
